@@ -3,11 +3,9 @@ package org.deepsymmetry.beatlink;
 import org.apiguardian.api.API;
 import org.slf4j.Logger;
 
-import java.lang.ref.WeakReference;
 import java.util.Collections;
-import java.util.LinkedList;
-import java.util.List;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * Provides the abstract skeleton for all the classes that can be started and stopped in Beat Link, and for which
@@ -19,13 +17,12 @@ public abstract class LifecycleParticipant {
     /**
      * Keeps track of the registered device announcement listeners.
      */
-    private final List<WeakReference<LifecycleListener>> lifecycleListeners = new LinkedList<>();
+    private final Set<LifecycleListener> lifecycleListeners = Collections.newSetFromMap(new ConcurrentHashMap<>());
 
     /**
      * <p>Adds the specified life cycle listener to receive announcements when the component starts and stops.
      * If {@code listener} is {@code null} or already present in the list
-     * of registered listeners, no exception is thrown and no action is performed. Presence on a listener list does not
-     * prevent an object from being garbage-collected if it has no other references.</p>
+     * of registered listeners, no exception is thrown and no action is performed.</p>
      *
      * <p>Lifecycle announcements are delivered to listeners on a separate thread to avoid worries about deadlock in
      * synchronized start and stop methods. The called function should still be fast, or delegate long operations to
@@ -34,8 +31,10 @@ public abstract class LifecycleParticipant {
      * @param listener the device announcement listener to add
      */
     @API(status = API.Status.STABLE)
-    public synchronized void addLifecycleListener(LifecycleListener listener) {
-        Util.addListener(lifecycleListeners, listener);
+    public void addLifecycleListener(LifecycleListener listener) {
+        if (listener != null) {
+            lifecycleListeners.add(listener);
+        }
     }
 
     /**
@@ -46,8 +45,10 @@ public abstract class LifecycleParticipant {
      * @param listener the life cycle listener to remove
      */
     @API(status = API.Status.STABLE)
-    public synchronized void removeLifecycleListener(LifecycleListener listener) {
-        Util.removeListener(lifecycleListeners, listener);
+    public void removeLifecycleListener(LifecycleListener listener) {
+        if (listener != null) {
+            lifecycleListeners.remove(listener);
+        }
     }
 
     /**
@@ -56,9 +57,9 @@ public abstract class LifecycleParticipant {
      * @return the currently registered lifecycle listeners
      */
     @API(status = API.Status.STABLE)
-    public synchronized Set<LifecycleListener> getLifecycleListeners() {
+    public Set<LifecycleListener> getLifecycleListeners() {
         // Make a copy so the caller gets an immutable snapshot of the current moment in time.
-        return Collections.unmodifiableSet(Util.gatherListeners(lifecycleListeners));
+        return Set.copyOf(lifecycleListeners);
     }
 
     /**
