@@ -11,7 +11,6 @@ import org.slf4j.LoggerFactory;
 
 import javax.swing.*;
 import java.io.IOException;
-import java.lang.ref.WeakReference;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.LinkedBlockingDeque;
@@ -305,13 +304,12 @@ public class BeatGridFinder extends LifecycleParticipant {
     /**
      * Keeps track of the registered beat grid listeners.
      */
-    private final List<WeakReference<BeatGridListener>> beatGridListeners = new LinkedList<>();
+    private final Set<BeatGridListener> beatGridListeners = Collections.newSetFromMap(new ConcurrentHashMap<>());
 
     /**
      * <p>Adds the specified beat grid listener to receive updates when the beat grid information for a player changes.
      * If {@code listener} is {@code null} or already present in the set of registered listeners, no exception is
-     * thrown and no action is performed. Presence on a listener list does not
-     * prevent an object from being garbage-collected if it has no other references.</p>
+     * thrown and no action is performed.</p>
      *
      * <p>To reduce latency, updates are delivered to listeners directly on the thread that is receiving packets
      * from the network, so if you want to interact with user interface objects in listener methods, you need to use
@@ -325,8 +323,10 @@ public class BeatGridFinder extends LifecycleParticipant {
      * @param listener the album art update listener to add
      */
     @API(status = API.Status.STABLE)
-    public synchronized void addBeatGridListener(BeatGridListener listener) {
-        Util.addListener(beatGridListeners, listener);
+    public void addBeatGridListener(BeatGridListener listener) {
+        if (listener != null) {
+            beatGridListeners.add(listener);
+        }
     }
 
     /**
@@ -337,8 +337,10 @@ public class BeatGridFinder extends LifecycleParticipant {
      * @param listener the waveform listener to remove
      */
     @API(status = API.Status.STABLE)
-    public synchronized void removeBeatGridListener(BeatGridListener listener) {
-        Util.removeListener(beatGridListeners, listener);
+    public void removeBeatGridListener(BeatGridListener listener) {
+        if (listener != null) {
+            beatGridListeners.remove(listener);
+        }
     }
 
     /**
@@ -347,9 +349,9 @@ public class BeatGridFinder extends LifecycleParticipant {
      * @return the listeners that are currently registered for beat grid updates
      */
     @API(status = API.Status.STABLE)
-    public synchronized Set<BeatGridListener> getBeatGridListeners() {
+    public Set<BeatGridListener> getBeatGridListeners() {
         // Make a copy so callers get an immutable snapshot of the current state.
-        return Collections.unmodifiableSet(Util.gatherListeners(beatGridListeners));
+        return Set.copyOf(beatGridListeners);
     }
 
     /**
@@ -359,10 +361,9 @@ public class BeatGridFinder extends LifecycleParticipant {
      * @param beatGrid the new beat grid associated with that player, if any
      */
     private void deliverBeatGridUpdate(int player, BeatGrid beatGrid) {
-        final Set<BeatGridListener> listeners = getBeatGridListeners();
-        if (!listeners.isEmpty()) {
+        if (!getBeatGridListeners().isEmpty()) {
             final BeatGridUpdate update = new BeatGridUpdate(player, beatGrid);
-            for (final BeatGridListener listener : listeners) {
+            for (final BeatGridListener listener : getBeatGridListeners()) {
                 try {
                     listener.beatGridChanged(update);
 
