@@ -8,7 +8,6 @@ import org.slf4j.LoggerFactory;
 
 import javax.swing.*;
 import java.io.IOException;
-import java.lang.ref.WeakReference;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.LinkedBlockingDeque;
@@ -606,13 +605,12 @@ public class WaveformFinder extends LifecycleParticipant {
     /**
      * Keeps track of the registered waveform listeners.
      */
-    private final List<WeakReference<WaveformListener>> waveformListeners = new LinkedList<>();
+    private final Set<WaveformListener> waveformListeners = Collections.newSetFromMap(new ConcurrentHashMap<>());
 
     /**
      * <p>Adds the specified waveform listener to receive updates when the waveform information for a player changes.
      * If {@code listener} is {@code null} or already present in the set of registered listeners, no exception is
-     * thrown and no action is performed. Presence on a listener list does not
-     * prevent an object from being garbage-collected if it has no other references.</p>
+     * thrown and no action is performed.</p>
      *
      * <p>Updates are delivered to listeners on the Swing Event Dispatch thread, so it is safe to interact with
      * user interface elements within the event handler.</p>
@@ -624,8 +622,10 @@ public class WaveformFinder extends LifecycleParticipant {
      * @param listener the waveform update listener to add
      */
     @API(status = API.Status.STABLE)
-    public synchronized void addWaveformListener(WaveformListener listener) {
-        Util.addListener(waveformListeners, listener);
+    public void addWaveformListener(WaveformListener listener) {
+        if (listener != null) {
+            waveformListeners.add(listener);
+        }
     }
 
     /**
@@ -636,8 +636,10 @@ public class WaveformFinder extends LifecycleParticipant {
      * @param listener the waveform update listener to remove
      */
     @API(status = API.Status.STABLE)
-    public synchronized void removeWaveformListener(WaveformListener listener) {
-        Util.removeListener(waveformListeners, listener);
+    public void removeWaveformListener(WaveformListener listener) {
+        if (listener != null) {
+            waveformListeners.remove(listener);
+        }
     }
 
     /**
@@ -646,9 +648,9 @@ public class WaveformFinder extends LifecycleParticipant {
      * @return the listeners that are currently registered for waveform updates
      */
     @API(status = API.Status.STABLE)
-    public synchronized Set<WaveformListener> getWaveformListeners() {
+    public Set<WaveformListener> getWaveformListeners() {
         // Make a copy so callers get an immutable snapshot of the current state.
-        return Collections.unmodifiableSet(Util.gatherListeners(waveformListeners));
+        return Set.copyOf(waveformListeners);
     }
 
     /**
